2013-08-09  Juanma Barranquero  <lekktu@gmail.com>

	* frameset.el (frameset-p): Add autoload cookie.
	(frameset--jump-to-register): New function, based on code moved from
	register.el.
	(frameset-to-register): Move from register.el.  Adapt to `registerv'.

	* register.el (frameset-frame-id, frameset-frame-with-id, frameset-p)
	(frameset-restore, frameset-save, frameset-session-filter-alist):
	Remove declarations.
	(register-alist): Doc fix.
	(frameset-to-register): Move to frameset.el.
	(jump-to-register, describe-register-1): Remove frameset-specific code.

2013-08-08  Juanma Barranquero  <lekktu@gmail.com>

	* allout-widgets.el (allout-widgets-pre-command-business)
	(allout-widgets-post-command-business)
	(allout-widgets-after-change-handler)
	(allout-decorate-item-and-context, allout-set-boundary-marker)
	(allout-body-modification-handler)
	(allout-graphics-modification-handler): Mark ignored arguments.
	(allout-widgets-post-command-business)
	(allout-widgets-exposure-change-processor)
	(allout-widgets-exposure-undo-processor)
	(allout-decorate-item-and-context, allout-redecorate-visible-subtree)
	(allout-parse-item-at-point, allout-decorate-item-guides)
	(allout-decorate-item-cue, allout-item-span): Remove unused variables.
	* allout.el (epa-passphrase-callback-function): Declare.
	(allout-overlay-insert-in-front-handler)
	(allout-overlay-interior-modification-handler)
	(allout-isearch-end-handler, allout-chart-siblings)
	(allout-up-current-level, allout-end-of-level, allout-reindent-body)
	(allout-yank-processing, allout-process-exposed)
	(allout-latex-verb-quote, allout-latexify-one-item, outlineify-sticky)
	(allout-latex-verbatim-quote-curr-line): Removed unused variables.
	* emacs-lisp/lisp-mode.el (lisp-eval-defun, last-sexp-toggle-display)
	(lisp-indent-defform): Mark ignored arguments.
	(lisp-indent-line): Mark ignored arguments.  Remove unused variables.
	(calculate-lisp-indent): Remove unused variables.